@@ -65,9 +65,9 @@ If user is in configure mode type 'exit' to exit program, 'quit'
 to exit configure mode.
 
 .TP
-\fB\-p\fR, \fB\-\-parse\fR
-Used with \-c commandline option. Don't format output send only single 
-tab delimited output to stdout.
+\fB\-n\fR, \fB\-\-nodelist\fR
+Only show objects with these nodes.  This does not have support for
+ionodes in bluegene mode.
 
 .TP
 \fB\-Q\fR, \fB\-\-quiet\fR
